[gd_scene load_steps=2 format=3 uid="uid://drryfmjyx8kew"]

[ext_resource type="Script" uid="uid://deal1f2t13ec4" path="res://Scripts/inventory/inventory_ui.gd" id="1_p83af"]

[node name="InventoryUI" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_p83af")

[node name="BackgroundPanel" type="ColorRect" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.67451)

[node name="ItemListContainer" type="VBoxContainer" parent="."]
offset_left = 60.0
offset_top = 92.0
offset_right = 448.0
offset_bottom = 571.0

[node name="Panel" type="Panel" parent="ItemListContainer"]
layout_mode = 2

[node name="ItemDetailsPanel" type="VBoxContainer" parent="."]
offset_left = 550.0
offset_top = 180.0
offset_right = 1063.0
offset_bottom = 230.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ItemDetailsPanel"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="ItemIconDisplay" type="TextureRect" parent="ItemDetailsPanel/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
mouse_filter = 2
expand_mode = 2
stretch_mode = 3

[node name="ItemNameLabel" type="Label" parent="ItemDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Nombre"

[node name="ItemDescriptionLabel" type="Label" parent="ItemDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Descripcion del Item"

[node name="CloseButton" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -102.0
offset_top = 26.0
offset_right = -44.0
offset_bottom = 57.0
grow_horizontal = 0
text = "X"
